force-app/main/default/objects/Portal_Knowledge_Item__c/Portal_Knowledge_Item__c.object-meta.xml
<CustomObject>
    <description>Links and information for the AGA portal knowledge base</description>
    <label>Portal Knowledge Item</label>
    <nameField>
        <label>Portal Knowledge Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Knowledge Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>