force-app/main/default/objects/Portal_Knowledge_Item__c/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the item displays in the Knowledge Item LWC</description>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>