force-app/main/default/objects/Portal_Knowledge_Item__c/fields/Portal_Knowledge_Category__c.field-meta.xml
<CustomField>
    <fullName>Portal_Knowledge_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Knowledge Category</label>
    <referenceTo>Portal_Knowledge_Category__c</referenceTo>
    <relationshipLabel>Portal Knowledge Items</relationshipLabel>
    <relationshipName>Portal_Knowledge_Items</relationshipName>
    <type>Lookup</type>
</CustomField>