force-app/main/default/objects/Portal_Knowledge_Item__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>The linked URL for the Knowledge Item</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>