force-app/main/default/objects/Portal_Knowledge_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Portal_Knowledge_Category__c</columns>
    <columns>Label__c</columns>
    <columns>URL__c</columns>
    <columns>Is_Published__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>